--- a/docs/GAML-Beginner.tex
+++ b/docs/GAML-Beginner.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2019-01-02 12:56:14 (Amsterdam)}
+    \date{Updated: 2019-01-03 22:35:11 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -137,9 +137,9 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{notice}{%
-\chapter*{Notice}\label{notice}}
-\addcontentsline{toc}{chapter}{Notice}
+\hypertarget{foreword}{%
+\chapter*{Foreword}\label{foreword}}
+\addcontentsline{toc}{chapter}{Foreword}
 
 \begin{itemize}
 \item
@@ -161,6 +161,34 @@ Cheers !\\
 \emph{2019}
 
 \includegraphics{gamacover.png}
+
+\hypertarget{editions}{%
+\chapter*{Editions}\label{editions}}
+\addcontentsline{toc}{chapter}{Editions}
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Second Edition}: January 2019
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Syntax Highlighting (pdf)
+  \item
+    Formatted code (pdf)
+  \end{itemize}
+\item
+  \textbf{First Edition}: June 2018
+
+  \begin{itemize}
+  \tightlist
+  \item
+    b/w code (pdf)
+  \item
+    Unformated code (pdf)
+  \end{itemize}
+\end{itemize}
 
 \hypertarget{report-errors-give-feedback}{%
 \chapter*{Report Errors/ Give Feedback}\label{report-errors-give-feedback}}
