corrections in Hanoi

--- a/docs/GAML-Beginner.tex
+++ b/docs/GAML-Beginner.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2019-05-07 10:18:24 (Amsterdam)}
+    \date{Updated: 2019-05-09 11:15:47 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -173,6 +173,8 @@ Cheers !\\[2\baselineskip]\textbf{Srirama Bhamidipati}\\
 \addcontentsline{toc}{chapter}{Editions}
 
 \begin{itemize}
+\item
+  Corrections: 7th May 2019, Hanoi
 \item
   \textbf{Second Edition}: 19 January 2019
 \item
